<resources>
    <string name="app_name">Tip Calculator Albertsen</string>
    <string name="ten">10%</string>
    <string name="fifteen">15%</string>
    <string name="twenty">20%</string>
    <string name="customTip">Other:</string>
    <string name="defaultPrice">$0.00</string>
    <string name="defaultNumPeople">0</string>
    <string name="amount">Bill Total:</string>
    <string name="numPeople">Number of People:</string>
    <string name="tipPercent">Tip Percentage:</string>
    <string name="reset">Reset</string>
    <string name="customTipDefault">25</string>
    <string name="calculate">Calculate</string>
    <string name="tipTotal">Tip Total:</string>
</resources>
